--- a/inedx.html
+++ b/inedx.html
@@ -66,6 +66,53 @@
               </li>
               <li>
                 <a href="#">Chi Siamo</a>
+                <ul class="under-list">
+                  <li>
+                    <a href="#">
+                      Chi siamo
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Blog
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Leadership
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Affilate
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Influencer
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Lavora con noi
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Cultura
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Diversità e inclusione
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Contatto
+                    </a>
+                  </li>
+                </ul>
               </li>
               <li>
                 <a href="#">Aiuto</a>
