--- a/inedx.html
+++ b/inedx.html
@@ -34,8 +34,70 @@
           </div>
           <div class="header-bottom-end">
             <ul class="list-inline">
-              <li>
+              <li id="position-static">
                 <a href="#">Funzionalità</a>
+                <!-- under list -->
+                <ul class="submenu">
+                  <li>Conto
+                    <ul>
+                      <li>
+                        <a href="#">Budget</a>
+                        </li>
+                      <li>
+                        <a href="#">Carte</a>
+                      </li>
+                      <li>
+                        <a href="#">Conto junior</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>Investimenti e risparmi
+                    <ul>
+                      <li>
+                        <a href="#">Azioni</a>
+                        </li>
+                      <li>
+                        <a href="#">Crypto</a>
+                      </li>
+                      <li>
+                        <a href="#">Prodotti</a>
+                      </li>
+                      <li>
+                        <a href="#">Salvadanai</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>Pagamenti
+                    <ul>
+                      <li>
+                        <a href="#">Trasferimenti di denaro</a>
+                        </li>
+                      <li>
+                        <a href="#">Fatture di gruppo</a>
+                      </li>
+                      <li>
+                        <a href="#">Abbonamenti</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>Extra
+                    <ul>
+                      <li>
+                        <a href="#">Donazioni</a>
+                        </li>
+                      <li>
+                        <a href="#">Assicurazione internazionali</a>
+                      </li>
+                      <li>
+                        <a href="#">Assicurazione del deposito</a>
+                      </li>
+                      <li>
+                        <a href="#">Sicurezza</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+                <!-- /under list -->
               </li>
               <li>
                 <a href="#">Abbonamenti</a>
@@ -66,6 +128,7 @@
               </li>
               <li>
                 <a href="#">Chi Siamo</a>
+                <!-- under list -->
                 <ul class="under-list">
                   <li>
                     <a href="#">
@@ -113,14 +176,44 @@
                     </a>
                   </li>
                 </ul>
+                <!-- /under list -->
               </li>
               <li>
                 <a href="#">Aiuto</a>
+                <!-- under list -->
+                <ul class="under-list">
+                  <li>
+                    <a href="#">
+                      Centro Assistenza
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Community
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Sicurezza
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      Stato di sistema
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      API Sviluppatore
+                    </a>
+                  </li>
+                </ul>
+                <!-- /under list -->
               </li>
             </ul>
             <div class="button">
-              <button class="btn" type="button" name="button">Accedi</button>
-              <button class="btn" type="button" name="button">Scarica l'app</button>
+              <button class="btn btn-grey" type="button" name="button">Accedi</button>
+              <button class="btn btn-black" type="button" name="button">Scarica l'app</button>
             </div>
           </div>
         </div>
