--- a/inedx.html
+++ b/inedx.html
@@ -16,7 +16,21 @@
   <body>
     <!-- header -->
     <header>
-      <div class="header-top"></div>
+      <!-- header top -->
+      <div class="header-top">
+        <div class="row-header-top wrapper">
+          <div class="cookie-top">
+            <p>Utilizziamo i cookie  🍪 per personalizzare la tua esperienza su Revolut.</p>
+            <span><a href="">Scopri di più</a> </span>
+          </div>
+          <div class="btn-top">
+            <a href="">Gestisci cookie</a>
+            <button class="btn btn-cookie" type="button" name="button">Accetto</button>
+          </div>
+        </div>
+      </div>
+      <!-- /header top -->
+      <!-- header bottom -->
       <div class="header-bottoom">
         <div class="row-header-bottom wrapper">
           <div class="header-bottom-start">
@@ -218,7 +232,22 @@
           </div>
         </div>
       </div>
+      <!-- /header bottom -->
     </header>
     <!-- /header -->
+    <!-- main -->
+    <main>
+      <div class="jumbotron wrapper">
+        <div id="jumbotron-title">
+          <h1>Ottieni di più dal tuo denaro</h1>
+          <p>Cambia denaro senza commissioni nascoste. Acquista Crypto e oro e gestisci il tuo denaro con l'analisi della spesa. Unisciti a più di 12 milioni di clienti Revolut.</p>
+        </div>
+        <div id="jumbotron-img">
+          <img src="https://assets.revolut.com/media/index/EU/home.png" alt="">
+        </div>
+
+      </div>
+    </main>
+    <!-- /main -->
   </body>
 </html>
